Fix for background on mobile devices.

--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ body{
   background-image: url(01.png);
   background-size: cover;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: compact;
 }
 
 .jumbotron{
